--- a/include/footer.html
+++ b/include/footer.html
@@ -6,9 +6,7 @@
                 <div class="col-md-12">
                     <div class="footer-logo">
                         <img src="img/logo-white-text.png" alt=""/>
-                        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                            tincidunt ut laoreet dolore <br/> magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
-                            quis nostrud exerci tation.</p>
+                        <p>Reliable service means Skymag</p>
                         <div class="widget-icon">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -26,7 +24,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-6">
                     <div class="copyright">
                         <p>website developed & designed with &nbsp; <i class="fa fa-heart"></i> &nbsp; by
-                            <a href="http://carabostudio.com">cárabo studio</a>.</p>
+                            <a href="http://ingineensight.com">ingineensight</a>.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
